➜

This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: AF_VSOCK not unset because of wrong nesting
Type: compile error Stage: resolved
Components: Extension Modules Versions: Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, mcduke, miss-islington
Priority: normal Keywords: patch

Created on 2018-08-31 15:12 by mcduke, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9016 merged mcduke, 2018-08-31 15:24
PR 9029 merged miss-islington, 2018-09-01 22:14
Messages (3)
msg324427 - (view) Author: Thomas Herzog (mcduke) * Date: 2018-08-31 15:12
If ./configure runs with the following result...

checking for linux/vm_sockets.h... no
checking for sockaddr_alg... no

...then the result of the first check is treated as if it was "yes". This is because the logic for disabling the vm_sockets functionality is nested inside an #ifdef HAVE_SOCKADDR_ALG.

This leads to compilation errors:

In file included from ./Modules/socketmodule.c:283:0:
./Modules/socketmodule.h:206:24: error: field ‘vm’ has incomplete type
     struct sockaddr_vm vm;
                        ^
msg324469 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2018-09-01 22:14
New changeset 2d7102e726e973ab2d307aa9748c7ec433677877 by Benjamin Peterson (Thomas Herzog) in branch 'master':
closes bpo-34555: Fix incorrectly nested test for HAVE_LINUX_VM_SOCKETS_H (GH-9016)
https://github.com/python/cpython/commit/2d7102e726e973ab2d307aa9748c7ec433677877
msg324470 - (view) Author: miss-islington (miss-islington) Date: 2018-09-01 22:30
New changeset 4c532da1209bd20ba07f18448134f32ace8c54f7 by Miss Islington (bot) in branch '3.7':
closes bpo-34555: Fix incorrectly nested test for HAVE_LINUX_VM_SOCKETS_H (GH-9016)
https://github.com/python/cpython/commit/4c532da1209bd20ba07f18448134f32ace8c54f7
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78736
2018-09-01 22:30:48miss-islingtonsetnosy: + miss-islington
messages: + msg324470
2018-09-01 22:14:10miss-islingtonsetpull_requests: + pull_request8495
2018-09-01 22:14:01benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg324469

resolution: fixed
stage: patch review -> resolved
2018-08-31 15:24:57mcdukesetkeywords: + patch
stage: patch review
pull_requests: + pull_request8484
2018-08-31 15:12:14mcdukecreate